--- a/index.html
+++ b/index.html
@@ -11,15 +11,97 @@
     <link rel="stylesheet" href="styles.css" type="text/css" />
   </head>
   <body>
-    <div class="container">
+    <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
+      <a class="navbar-brand" href="#">Navbar</a>
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-toggle="collapse"
+        data-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="#"
+              >Home <span class="sr-only">(current)</span></a
+            >
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Link</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a
+              class="nav-link dropdown-toggle"
+              href="#"
+              id="navbarDropdown"
+              role="button"
+              data-toggle="dropdown"
+              aria-haspopup="true"
+              aria-expanded="false"
+            >
+              Dropdown
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item" href="#">Action</a>
+              <a class="dropdown-item" href="#">Another action</a>
+              <div class="dropdown-divider"></div>
+              <a class="dropdown-item" href="#">Something else here</a>
+            </div>
+          </li>
+          <!-- <li class="nav-item">
+            <a
+              class="nav-link disabled"
+              href="#"
+              tabindex="-1"
+              aria-disabled="true"
+              >Disabled</a
+            >
+          </li> -->
+        </ul>
+        <form class="form-inline my-2 my-lg-0">
+          <input
+            class="form-control mr-sm-2"
+            type="search"
+            placeholder="Search"
+            aria-label="Search"
+          />
+          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">
+            Search
+          </button>
+        </form>
+      </div>
+    </nav>
+    <div class="container-fluid landing-1">
       <div class="row">
-        <div class="col col-sm-6">
-          1 of 2
-        </div>
-        <div class="col col-sm-3">
-          2 of 2
+        <div class="col-lg-8 mx-auto">
+          <div class="jumbotron ">
+            <h1 class="display-6 text-center">Next Game</h1>
+            <p class="lead">
+              A web application that helps players to find and play recreational
+              pick-up sports. The app allows the search for a popular pick-up
+              game to be quicker with minimal effort from the user.
+            </p>
+            <p>
+              Login or Sign Up today to find your Next Game!
+            </p>
+            <div class="btn-container">
+              <a class="btn btn-primary btn-lg" href="#" role="button">Login</a>
+              <a class="btn btn-secondary btn-lg" href="#" role="button"
+                >Sign up</a
+              >
+            </div>
+          </div>
         </div>
       </div>
+    </div>
+    <div class="container-fluid landing-2">
+      Test
     </div>
     <script
       src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
